--- a/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryPriceCreateDialog.razor
+++ b/Friday.ERP.Client/Pages/Inventory/Dialogs/InventoryPriceCreateDialog.razor
@@ -86,7 +86,7 @@
     [Parameter] public Guid Guid { get; set; }
     [Parameter] public string? RawImage { get; set; }
     [Parameter] public string? Code { get; set; }
-    [Parameter] public int Stock { get; set; }
+    [Parameter] public long Stock { get; set; }
     [Parameter] public string? Name { get; set; }
     [Parameter] public string? CategoryName { get; set; }
 
