--- a/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionInfoDialog.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Dialogs/TransactionInfoDialog.razor
@@ -1,22 +1,21 @@
 <MudDialog>
     <DialogContent>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="SubTotal" SecondText="@SubTotal.ToString()"/>
-             <CustomLabelAndLabel FirstText="Discount" SecondText="@($"- {Discount}")" SecondTextColor="Color.Error"/>
-            <CustomLabelAndLabel FirstText="Discount Type" SecondText="@DiscountType"/>
-            <CustomLabelAndLabel FirstText="Delivery Fees" SecondText="@DeliveryFees.ToString()"/>
+            <CustomLabelAndLabel FirstText="SubTotal" SecondText="@($"{SubTotal.ToString()} mmk")"/>
+            <CustomLabelAndLabel FirstText="Discount" SecondText="@($"- {Discount.ToString()} mmk")" SecondTextColor="Color.Error"/>
+            <CustomLabelAndLabel FirstText="Delivery Fees" SecondText="@($"{DeliveryFees.ToString()} mmk")"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Total" SecondText="@Total.ToString()"/>
-            <CustomLabelAndLabel FirstText="Grand Total" SecondText="@GrandTotal.ToString()"/>
+            <CustomLabelAndLabel FirstText="Total" SecondText="@($"{Total.ToString()} mmk")"/>
+            <CustomLabelAndLabel FirstText="Grand Total" SecondText="@($"{GrandTotal.ToString()} mmk")"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
-            <CustomLabelAndLabel FirstText="Paid Total" SecondText="@PaidTotal.ToString()"/>
+            <CustomLabelAndLabel FirstText="Paid Total" SecondText="@($"{PaidTotal.ToString()} mmk")"/>
             <CustomLabelAndLabel FirstText="Credit / Debit Left"
-                                 SecondTextColor="@(CreditDebitLeft < 0 ? Color.Error : Color.Dark)"
-                                 SecondText="@CreditDebitLeft.ToString()"/>
+                                 SecondTextColor="@(CreditDebitLeft < 0 ? Color.Error : Color.Info)"
+                                 SecondText="@($"{CreditDebitLeft.ToString()} mmk")"/>
         </MudGrid>
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
         <MudGrid Spacing="2">
@@ -43,7 +42,6 @@
 
     [Parameter] public long SubTotal { get; set; }
     [Parameter] public long? Discount { get; set; }
-    [Parameter] public string? DiscountType { get; set; }
     [Parameter] public long DeliveryFees { get; set; }
     [Parameter] public long Total { get; set; }
     [Parameter] public long GrandTotal { get; set; }
