--- a/Friday.ERP.Client/Pages/Invoice/Index.razor
+++ b/Friday.ERP.Client/Pages/Invoice/Index.razor
@@ -462,9 +462,9 @@
         {
             parameters.Add("SubTotal", _selectedInvoiceSale!.SubTotal);
             parameters.Add("Discount", _selectedInvoiceSale!.Discount);
-            parameters.Add("DeliveryFees", _selectedInvoicePurchase!.DeliveryFees);
-            parameters.Add("Total", _selectedInvoicePurchase!.Total);
-            parameters.Add("GrandTotal", _selectedInvoicePurchase!.GrandTotal);
+            parameters.Add("DeliveryFees", _selectedInvoiceSale!.DeliveryFees);
+            parameters.Add("Total", _selectedInvoiceSale!.Total);
+            parameters.Add("GrandTotal", _selectedInvoiceSale!.GrandTotal);
             parameters.Add("PaidTotal", _selectedInvoiceSale!.PaidTotal);
             parameters.Add("CreditDebitLeft", _selectedInvoiceSale!.CreditDebitLeft);
             parameters.Add("Remark", _selectedInvoiceSale!.Remark);
