--- a/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
@@ -8,8 +8,8 @@
             @if (CustomerName is not null)
             {
                 <CustomLabelAndLabel FirstText="Existing Credit / Debit"
-                                     SecondTextColor="@(CustomerExistingCreditDebit < 0 ? Color.Error : Color.Dark)"
-                                     SecondText="@_vendorExistingCreditDebitString"/>
+                                     SecondTextColor="@(CustomerExistingCreditDebit < 0 ? Color.Error : Color.Info)"
+                                     SecondText="@_customerExistingCreditDebitString"/>
             }
 
         </MudGrid>
@@ -55,8 +55,8 @@
             <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
             <MudGrid Spacing="2">
                 <CustomLabelAndLabel FirstText="Total Credit / Debit (Overall)"
-                                     SecondText="@_creditDebitLeftString"
-                                     SecondTextColor="@(_totalCreditDebitLeft < 0 ? Color.Error : Color.Dark)"/>
+                                     SecondText="@_totalCreditDebitLeftString"
+                                     SecondTextColor="@(CreditDebitLeftTransaction < 0 ? Color.Error : Color.Info)"/>
             </MudGrid>
         }
         <MudDivider DividerType="DividerType.FullWidth" Class="my-4"/>
@@ -88,10 +88,10 @@
     [Parameter] public long CustomerExistingCreditDebit { get; set; }
     [Parameter] public long SubTotal { get; set; }
 
-    string? _vendorExistingCreditDebitString;
-    string? _creditDebitLeftString = "0 mmk";
+    string? _customerExistingCreditDebitString;
+    string? _totalCreditDebitLeftString = "0 mmk";
     string? _selectedDiscountType = "Flat";
-    long _totalCreditDebitLeft;
+    
     long _discount;
 
     long Discount { get; set; }
@@ -105,13 +105,13 @@
     protected override void OnParametersSet()
     {
         base.OnParametersSet();
-        _vendorExistingCreditDebitString = CustomerExistingCreditDebit.ToString();
+        _customerExistingCreditDebitString = CustomerExistingCreditDebit.ToString();
         if (CustomerExistingCreditDebit < 0)
-            _vendorExistingCreditDebitString += " mmk (Debit)";
+            _customerExistingCreditDebitString += " mmk (Debit)";
         else if (CustomerExistingCreditDebit == 0)
-            _vendorExistingCreditDebitString += " mmk";
+            _customerExistingCreditDebitString += " mmk";
         else
-            _vendorExistingCreditDebitString += " mmk (Credit)";
+            _customerExistingCreditDebitString += " mmk (Credit)";
 
         Total = SubTotal;
         GrandTotal = Total - CustomerExistingCreditDebit;
@@ -139,16 +139,16 @@
         if (_selectedDiscountType == "Flat")
         {
             Discount = _discount;
-            Total = SubTotal + DeliveryFees - Discount;
         }
         else
         {
             var discountPercent = (double)_discount / 100;
             var calculatedDiscount = SubTotal - SubTotal * discountPercent;
+            calculatedDiscount = SubTotal - calculatedDiscount;
             Discount = (long)calculatedDiscount;
-            Total = Convert.ToInt64(Discount) + DeliveryFees;
+            
         }
-
+        Total = SubTotal + DeliveryFees - Convert.ToInt64(Discount);
         GrandTotal = Total - CustomerExistingCreditDebit;
 
         if (CustomerName is null)
@@ -176,15 +176,13 @@
     void CalculateCreditDebit(long longValue)
     {
         CreditDebitLeftTransaction = longValue - GrandTotal;
-
-        _totalCreditDebitLeft = CustomerExistingCreditDebit + CreditDebitLeftTransaction;
-        _creditDebitLeftString = _totalCreditDebitLeft.ToString();
-        if (_totalCreditDebitLeft < 0)
-            _creditDebitLeftString += " mmk (Debit)";
-        else if (_totalCreditDebitLeft == 0)
-            _creditDebitLeftString += " mmk";
+        _totalCreditDebitLeftString = CreditDebitLeftTransaction.ToString();
+        if (CreditDebitLeftTransaction < 0)
+            _totalCreditDebitLeftString += " mmk (Debit)";
+        else if (CreditDebitLeftTransaction == 0)
+            _totalCreditDebitLeftString += " mmk";
         else
-            _creditDebitLeftString += " mmk (Credit)";
+            _totalCreditDebitLeftString += " mmk (Credit)";
     }
 
     void Cancel()
@@ -205,5 +203,4 @@
         );
         MudDialog!.Close(DialogResult.Ok(dataToReturn));
     }
-
 }
