--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
@@ -172,6 +172,7 @@
             Total,
             GrandTotal,
             PaidTotal,
+            VendorExistingCreditDebit,
             CreditDebitLeftTransaction,
             IsPaid,
             Remark
