--- a/Friday.ERP.Client/Pages/Purchase/Index.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Index.razor
@@ -332,6 +332,7 @@
                 invoiceInfo.Total,
                 invoiceInfo.GrandTotal,
                 invoiceInfo.PaidTotal,
+                invoiceInfo.ExistingCreditDebit,
                 invoiceInfo.CreditDebitLeft,
                 invoiceInfo.IsPaid,
                 invoiceInfo.Remark,
