--- a/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Sale/Dialogs/SaleTransactionDialog.razor
@@ -198,6 +198,7 @@
             Total,
             GrandTotal,
             PaidTotal,
+            CustomerExistingCreditDebit,
             CreditDebitLeftTransaction,
             Remark
         );
