--- a/Friday.ERP.Client/Pages/Sale/Index.razor
+++ b/Friday.ERP.Client/Pages/Sale/Index.razor
@@ -385,6 +385,7 @@
                 invoiceSalePreCreateDto.Total,
                 invoiceSalePreCreateDto.GrandTotal,
                 invoiceSalePreCreateDto.PaidTotal,
+                invoiceSalePreCreateDto.ExistingCreditDebit,
                 invoiceSalePreCreateDto.CreditDebitLeft,
                 invoiceSalePreCreateDto.Remark,
                 selectedCustomerVendor?.Guid,
