--- a/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
+++ b/Friday.ERP.Client/Pages/Purchase/Dialogs/PurchaseTransactionDialog.razor
@@ -16,7 +16,7 @@
             <CustomLabelAndInput FirstText="Discount">
                 <MudItem sm="3" md="3" lg="3" Class="align-self-center">
                     <MudSelect T="string"
-                               @bind-Value="_selectedDiscountType"
+                              ValueChanged="DiscountTypeValueChanged"
                                FullWidth="true"
                                Margin="Margin.Dense"
                                Variant="Variant.Outlined">
@@ -25,7 +25,9 @@
                     </MudSelect>
                 </MudItem>
                 <MudItem sm="4" md="4" lg="4" Class="align-self-center">
-                    <MudTextField T="long" ValueChanged="@(e => DiscountOrDeliveryFeesValueChanged(e, true))"
+                    <MudTextField T="long" 
+                                  Value="@_discount"
+                                  ValueChanged="@(e => DiscountOrDeliveryFeesValueChanged(e, true))"
                                   Immediate="true"
                                   FullWidth="true"
                                   Margin="Margin.Dense"
@@ -110,7 +112,13 @@
         CalculateCreditDebit(PaidTotal);
         StateHasChanged();
     }
-
+    
+    void DiscountTypeValueChanged(string value)
+    {
+        _selectedDiscountType = value;
+        DiscountOrDeliveryFeesValueChanged(0, true);
+    }
+    
     void DiscountOrDeliveryFeesValueChanged(long value, bool isDiscountField)
     {
         if (isDiscountField)
