--- a/Friday.ERP.Client/Pages/Login/Index.razor
+++ b/Friday.ERP.Client/Pages/Login/Index.razor
@@ -15,10 +15,10 @@
         <MudGrid>
             <CustomLabelAndStringField FirstSm="4" FirstMd="4"
                                        SecondSm="8" SecondMd="8"
-                                       FirstText="Username" @bind-BindValue="@Username" Required="true"/>
+                                       FirstText="လော့ဂ်အင်အမည်" @bind-BindValue="@Username" Required="true"/>
             <CustomLabelAndFieldPassword FirstSm="4" FirstMd="4"
                                          SecondSm="8" SecondMd="8"
-                                         FirstText="Password" @bind-BindValue="@Password" Required="true" KeyboardInputType="@_passwordInput"
+                                         FirstText="စကားဝှက်" @bind-BindValue="@Password" Required="true" KeyboardInputType="@_passwordInput"
                                          AdornmentIcon="@_passwordInputIcon" OnAdornmentClick="@ShowPassword"/>
         </MudGrid>
         <MudGrid Class="mt-2">
